ping_pong/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  strategy:
    canary:
      maxSurge: 1
      maxUnavailable: 0
      steps:
        - setWeight: 100
        - analysis:
            templates:
              - templateName: ping-pong-cpu-rate
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: ping-pong
          readinessProbe:
            httpGet:
              path: /pings
              port: 3000
